--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -200,6 +200,7 @@
       rut_auth_realm: "{{ nexus_rut_auth_realm }}"
       ldap_realm: "{{ nexus_ldap_realm }}"
       docker_bearer_token_realm: "{{ nexus_docker_bearer_token_realm }}"
+      conan_bearer_token_realm: "{{ nexus_conan_bearer_token_realm }}"
 
 - name: Configure RUT Auth header
   ansible.builtin.include_tasks: call_script.yml
