--- a/tasks/process_repos_list.yml
+++ b/tasks/process_repos_list.yml
@@ -564,6 +564,27 @@
             (nexus_repos_r_proxy | map('combine', {"format": "conda", "type": "proxy"}) | list)
           }}
 
+- name: Process definitions for conan
+  when: nexus_config_conan | bool
+  block:
+    - name: Apply defaults to conan proxy repos
+      ansible.builtin.set_fact:
+        nexus_repos_r_proxy: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_conan_proxy -%}
+            {{ result.append(_nexus_repos_conan_defaults | combine(repo)) }}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
+
+    - name: Add conan repositories to global repos list
+      ansible.builtin.set_fact:
+        _nexus_repos_global_list: >-
+          {{
+            _nexus_repos_global_list | default([])
+            +
+            (nexus_repos_conan_proxy | map('combine', {"format": "conan", "type": "proxy"}) | list)
+          }}
+
 - name: Process definitions for go repositories
   when: nexus_config_go | bool
   block:
